# aicp_mapping_ros2

aicp_core/: CMakeLists.txt  package.xml
aicp_core/include/aicp_core/aicp_classification/: classification.hpp  svm.hpp
aicp_core/include/aicp_core/aicp_overlap/: octrees_overlap.hpp  overlap.hpp
aicp_core/include/aicp_core/aicp_registration/: app.hpp  pointmatcher_registration.hpp  registration.hpp  yaml_configurator.hpp
aicp_core/include/aicp_core/aicp_utils/: icpMonitor.h
aicp_core/src/classification/: example.cpp  main.cpp  svm.cpp
aicp_core/src/overlap/: octrees_overlap.cpp
aicp_core/src/registration/: aligned_cloud.cpp  aligned_clouds_graph.cpp  app.cpp  pointmatcher_registration.cpp  yaml_configurator.cpp
aicp_core/src/utils/: cloudIO.cpp  common.cpp  fileIO.cpp  filteringUtils.cpp  icpMonitor.cpp  timing.cpp
aicp_core/test/: aicp_test.cpp
aicp_ros/: CMakeLists.txt  package.xml
aicp_ros/include/aicp_ros/: app_ros.hpp  talker_ros.hpp  velodyne_accumulator.hpp  visualizer_ros.hpp
aicp_ros/launch/: aicp_launch.py
aicp_ros/src/: aicp_ros_node.cpp  app_ros.cpp  talker_ros.cpp  velodyne_accumulator.cpp  visualizer_ros.cpp
aicp_srv/: CMakeLists.txt  package.xml
