<?xml version="1.0"?>
<package format="3">
  <name>aicp_core</name>
  <version>1.0.0</version>
  <description>AICP core package</description>

  <author email="snobili@robots.ox.ac.uk">Simona Nobili</author>
  <maintainer email="snobili@robots.ox.ac.uk">Simona Nobili</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <license>LGPLv2.1</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>yaml-cpp</depend>
  <depend>libpointmatcher</depend>
  <depend>vtk</depend>


  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
