<?xml version="2.0"?>
<package format="3">
  <name>aicp_ros</name>
  <version>0.0.1</version>
  <description>AICP ROS package</description>

  <author email="snobili@robots.ox.ac.uk">Simona Nobili</author>
  <maintainer email="snobili@robots.ox.ac.uk">Simona Nobili</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <license>LGPL-2.1</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>aicp_core</depend>
  <depend>aicp_srv</depend>
  <depend>rclcpp</depend>
  <depend>eigen_conversions</depend>
  <depend>pcl_conversions</depend>
  <depend>tf_conversions</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>vtk</depend>
  <depend>tf2</depend>



  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
