<?xml version="3.0"?>
<package format="3">
  <name>aicp_srv</name>
  <version>0.0.0</version>
  <description>AICP services package</description>

  <author email="snobili@robots.ox.ac.uk">Simona Nobili</author>
  <maintainer email="snobili@robots.ox.ac.uk">Simona Nobili</maintainer>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <license>LGPL-2.1</license>

 
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group> 

  <build_depend>rclcpp</build_depend>

 



  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
